--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.0.1",
   "repository": "dead-horse/node-thunkify-wrap",
   "description": "Turn callbacks, arrays, generators, generator functions, and promises into a thunk",
-  "keywords": ["thunk", "co", "generator", "generators", "promise"],
-  "dependencies": {
-      "thunkify": "0.0.1"
-    },
+  "keywords": [
+    "thunk",
+    "co",
+    "generator",
+    "generators",
+    "promise"
+  ],
+  "dependencies": {},
   "devDependencies": {
     "mocha": "*",
-    "should": "*"
+    "should": "*",
+    "co": "^3.0.4"
   },
   "license": "MIT"
 }
