fix test in 0.10

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "dependencies": {},
   "devDependencies": {
     "mocha": "*",
-    "should": "*",
-    "co": "^3.0.4"
+    "should": "*"
   },
   "license": "MIT"
 }
