yield* asyncGen(a, 1) slow 1.5x than yield asyncThunk(a, 1)

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {
     "co-mocha": "*",
     "mocha": "*",
-    "should": "*"
+    "should": "*",
+    "co": "*"
   },
   "license": "MIT"
 }
