--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "promise"
   ],
   "dependencies": {
-    "enable": "1"
+    "enable": "~3.2.0"
   },
   "devDependencies": {
     "co-mocha": "*",
